--- a/frontend/src/themes/gondi.scss
+++ b/frontend/src/themes/gondi.scss
@@ -94,6 +94,6 @@ $liga-manager-ui-dark-theme: mat.define-dark-theme((
   )
 ));
 
-.darkMode {
+.dark {
   @include mat.all-component-colors($liga-manager-ui-dark-theme);
 }
